src/styles/global.css
html {
  background-color: #FFF;
}

body {
  margin: 0;
  font-family: Poppins;
  font-size: 16px;
  color: #465458;
  line-height: 1.4;
}

header {
  background: #E6E6EE;
}

header .header-content,
.articles {
  max-width: 1080px;
  padding: 2rem 1rem 0 1rem;
  margin-left: auto;
  margin-right: auto;
}

div.index-page div.background-slant,
div.index-page div.background-slant::after {
  position: absolute;
  left: 0;
  width: 100%;
  background: #E6E6EE;
  z-index: -1;
}

div.index-page div.background-slant {
  top: 0;
}

div.index-page div.background-slant {
  height: 48rem;
}

div.index-page div.background-slant::after {
  content: "";
  bottom: -11vw;
  height: 11vw;
  transform: skew(-84deg);
  transform-origin: top;
}

nav.header-navigation {
  display: flex;
  padding-bottom: 3rem;
}

nav.header-navigation a.logo-link {
  display: flex;
  align-items: center;
  text-decoration: none;
  font-weight: bold;
  font-size: 1.4rem;
  color: #465458;
}

nav.header-navigation a.logo-link img {
  width: 90px;
  height: 90px;
  margin-right: 1rem;
  border-radius: 50%;
}

nav.header-navigation div.logo-kellyn-e-marcelo hr {
  width: 60%;
  margin-left: 0;
  border: 2px solid #805577;
}

nav.header-navigation ul {
  display: flex;
  align-self: center;
  padding: 0;
  margin-left: auto;
  list-style: none;
}

nav.header-navigation li {
  display: inline-block;
  margin-left: 1.5rem;
}

nav.header-navigation li a {
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  color: #465458;
}

nav.header-navigation li a:hover {
  color: #805577;
}

div.index-page div.presentation {
  display: flex;
  justify-content: space-between;
}

div.index-page div.presentation-content {
  width: 46%;
}

div.index-page div.presentation-content h1,
div.index-page div.presentation-content h2 {
  margin: 0;
  margin-bottom: 1rem;
}

div.index-page div.presentation-content h1 {
  font-size: 2.8rem;
  color: #333;
}

div.index-page div.presentation-content h2 {
  font-weight: normal;
  font-size: 2rem;
}

div.index-page div.presentation-video {
  width: 46%;
}

div.index-page div.presentation-video iframe {
  width: 100%;
  height: 278px;
  margin-top: 5.6rem;
}

div.articles-page div.presentation,
div.article-page div.presentation {
  padding-bottom: 3rem;
  max-width: 38rem;
  margin: auto;
}

div.articles-page div.presentation-content,
div.article-page div.presentation-content {
  text-align: center;
}

div.articles-page div.presentation-content h1,
div.article-page div.presentation-content h1 {
  margin-top: 0;
  color: #333;
}

div.articles-page div.presentation-content h2,
  div.article-page div.presentation-content h2 {
  font-size: 1.2rem;
  font-weight: normal;
}

div.articles-page div.presentation hr,
div.article-page div.presentation hr {
  width: 20%;
  margin-top: 2rem;
  margin-bottom: 2rem;
  border: 2px solid #805577;
}

div.article-page main {
  max-width: 680px;
  padding: 4rem 1rem 4rem 1rem;
  margin-left: auto;
  margin-right: auto;
}

div.article-page div.logo-author-and-date-container {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

div.article-page div.logo-author-and-date-container img {
  width: 60px;
  height: 60px;
  margin-right: 1rem;
  border-radius: 50%;
}

div.article-page div.author-and-date-container strong {
  display: flex;
}

div.article-page div.tags {
  margin-bottom: 1rem;
}

div.tags span.tag {
  margin-right: .5rem;
  padding: .25rem .5rem;
  color: #CCB3C7;
  background-color: #805577;
  border-radius: 0.25rem;
  display: inline-block;
  margin-bottom: .25rem;
}

div.article-page article a {
  color: #805577;
}

div.articles div.articles-title {
  margin: auto;
  width: max-content;
}

div.articles div.articles-title h2 {
  margin-bottom: 1rem;
  font-size: 2.4rem;
  color: #333;
}

div.articles div.articles-title hr {
  width: 60%;
  margin-left: 0;
  margin-bottom: 2rem;
  border: 2px solid #805577;
}

a.article-link {
  display: block;
  width: 50%;
  margin: auto;
  text-decoration: none;
  color: #465458;
}

div.articles article {
  padding: 1rem;
  margin-bottom: 2rem;
  background-color: #FFF;
  border: .1rem solid #805577;
  border-radius: .5rem;
}

div.articles article:hover {
  border-color: #FFF;
  outline: .2rem solid #805577;
  -moz-outline-radius: .5rem;
}

div.articles article h3,
div.articles article p {
  margin-top: .5rem;
}

div.articles article h3 {
  margin-bottom: 0;
}

footer {
  position: absolute;
  left: 0;
  width: 100%;
  margin-top: 2rem;
  background-color: #E6E6EE;
}

footer div.footer-content {
  display: flex;
  justify-content: space-between;
  padding: 2rem 1rem;
  margin: auto;
  max-width: 1080px;
}

footer div.social-media {
  float: right;
}

footer div.social-media a {
  display: inline-flex;
  margin-left: 2rem;
  text-decoration: none;
  color: #465458;
}

footer div.social-media a span {
  margin-left: 0.3rem;
}

@media (min-width: 992px) {
  div.index-page div.background-slant {
    height: 51rem;
  }
}

@media (min-width: 1200px) {
  div.index-page div.background-slant {
    height: 48rem;
  }
}

@media (min-width: 2000px) {
  div.index-page div.background-slant {
    height: 46rem;
  }
}

@media (max-width: 992px) {
  div.index-page div.presentation-video iframe {
    height: 247px;
  }
}

@media (max-width: 991px) {
  div.index-page div.background-slant {
    height: 44rem;
  }

  nav.header-navigation a.logo-link {
    font-size: 1.2rem;
  }

  nav.header-navigation a.logo-link img {
    width: 70px;
    height: 70px;
  }

  header .header-content,
  .articles {
    padding-top: 1rem;
  }

  div.index-page div.presentation-content h1 {
    font-size: 2.4rem;
  }

  div.index-page div.presentation-content h2 {
    font-size: 1.6rem;
  }

  div.index-page div.presentation-video iframe {
    height: 247px;
    margin-top: 4.8rem;
  }

  a.article-link {
    width: 80%;
  }

  footer {
    margin-top: 1rem;
  }

  footer div.footer-content {
    font-size: .9rem;
  }
}

@media (max-width: 965px) {
  div.index-page div.presentation-video iframe {
    height: 240px;
  }
}

@media (max-width: 800px) {
  div.index-page div.presentation-video iframe {
    height: 190px;
  }

  div.index-page div.background-slant {
    height: 44rem;
  }
}

@media (max-width: 768px) {
  div.index-page div.background-slant {
    height: 46rem;
  }
}

@media (max-width: 767px) {
  nav.header-navigation div.logo-kellyn-e-marcelo {
    display: none;
  }

  div.index-page div.background-slant {
    height: 62rem;
  }

  nav.header-navigation {
    padding-bottom: 2rem;
  }

  header .header-content {
    max-width: 480px;
  }

  div.index-page div.presentation {
    display: block;
  }

  div.index-page div.presentation-content {
    width: 100%;
  }

  div.index-page div.presentation-video {
    width: 100%;
  }

  div.index-page div.presentation-video iframe {
    height: 270px;
    margin-top: 2rem;
  }

  a.article-link {
    width: 100%;
  }

  footer div.copyright {
    margin-bottom: .4rem;
  }

  footer div.social-media a {
    display: flex;
    margin-bottom: .4rem;
  }
}

@media (max-width: 520px) {
  div.index-page div.background-slant {
    height: 60rem;
  }
}

@media (max-width: 518px) {
  footer div.footer-content {
    display: block;
    max-width: max-content;
  }

  footer div.social-media {
    float: unset;
    margin-top: 1rem;
  }

  footer div.social-media a {
    margin-left: 0;
  }
}

@media (max-width: 446px) {
  nav.header-navigation li span[role="img"] {
    display: none;
  }
}

@media (max-width: 420px) {
  div.index-page div.presentation-video iframe {
    height: 210px;
  }
}

@media (max-width: 400px) {
  div.index-page div.presentation-video iframe {
    height: 186px;
  }
}

@media (max-width: 375px) {
  nav.header-navigation li {
    margin-left: .9rem;
    font-size: .9rem;
  }
}

@media (max-width: 375px) {
  div.index-page div.background-slant {
    height: 62rem;
  }
}

